--- a/CompanyEmployees-Remastered/CompanyEmployees-Remastered.csproj
+++ b/CompanyEmployees-Remastered/CompanyEmployees-Remastered.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>CompanyEmployees_Remastered</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LoggingService\LoggingService.csproj" />
+  </ItemGroup>
+
 </Project>
