--- a/CompanyEmployees-Remastered/CompanyEmployees-Remastered.csproj
+++ b/CompanyEmployees-Remastered/CompanyEmployees-Remastered.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CompanyEmployees.Infrastructure.Persistence\CompanyEmployees.Infrastructure.Persistence.csproj" />
     <ProjectReference Include="..\LoggingService\LoggingService.csproj" />
   </ItemGroup>
 
