--- a/CompanyEmployees-Remastered/appsettings.json
+++ b/CompanyEmployees-Remastered/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "server=localhost,1433; database=CompanyEmployeeRemastered; User Id=sa;Password=micR0S3rvice$; TrustServerCertificate=true"
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
