--- a/CompanyEmployees.Infrastructure.Presentation/CompanyEmployees.Infrastructure.Presentation.csproj
+++ b/CompanyEmployees.Infrastructure.Presentation/CompanyEmployees.Infrastructure.Presentation.csproj
@@ -12,6 +12,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.4" />
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
