--- a/CompanyEmployees.Infrastructure.Presentation/CompanyEmployees.Infrastructure.Presentation.csproj
+++ b/CompanyEmployees.Infrastructure.Presentation/CompanyEmployees.Infrastructure.Presentation.csproj
@@ -11,6 +11,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.4" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.4" />
 	</ItemGroup>
