--- a/CompanyEmployees.Core.Domain/CompanyEmployees.Core.Domain.csproj
+++ b/CompanyEmployees.Core.Domain/CompanyEmployees.Core.Domain.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
 	</ItemGroup>
 </Project>
