--- a/CompanyEmployees-Remastered/appsettings.json
+++ b/CompanyEmployees-Remastered/appsettings.json
@@ -40,5 +40,10 @@
       }
     ]
   },
+  "JwtSettings": {
+    "validIssuer": "CodeMazeAPI",
+    "validAudience": "https://localhost:5001",
+    "expires": 5
+  },
   "AllowedHosts": "*"
 }
